Version 0.1.16     unreleased

	* Upgrade to cattrs 1.2.0 and handle related behavior changes.

Version 0.1.15     17 Jan 2021

	* Update build system to use poetry.core.
	* Fix the GitHub test suite by adding Python version into cache id.
	* Move to newer versions of various build dependencies (black, isort, etc.).
	* Standardize on UNIX line endings in Git working copy and PyPI package.
	* Make improvements to Read the Docs integration, including a PR merge gate.
	* Clean up badges shown in documentation, so they are links to something sane.
	* Make improvements to the MyPy and Pylint configuration.
	* Move to a new two-step release process based on cedar-backup3.
	* Create a changelog for the first time, along with new release process.
	* Upgrade to latest apologies library (v0.1.29) to stay up-to-date.
